<resources>
    <string name="app_name">SMusicPlayer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Library</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Add folders below-</string>
    <string name="file_path">Enter folder path</string>
    <string name="Play">Play</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Reset</string>
    <string name="Add">ADD</string>
    <string name="Now_playing">-</string>
    <string name="SMusic">MPlayer</string>
</resources>